Correct CSS styling for spacing and sizing

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h1 {
 nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   text-decoration: underline;
   text-decoration-thickness: 1px;
 }
@@ -68,9 +69,14 @@ p {
   font-size: 4rem;
 }
 
+.container-hero-text p {
+  font-size: 1.6rem;
+}
+
 form {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  gap: 10px;
 }
 
 #form-email-input {
@@ -78,10 +84,12 @@ form {
   background-color: #fafafa;
   border: solid;
   border-style: dotted;
-  border-width: 3px;
-  padding: 0px 4px;
+  border-width: 2px;
+  padding: 4px 4px;
   border-radius: 5px;
+  font-size: 1.2rem;
   font-family: "Josefin Slab";
+  text-align: center;
 }
 
 .form-email button {
@@ -91,7 +99,7 @@ form {
   border-color: #a55fdc;
   border-radius: 5px;
   background-color: #a55fdc;
-  margin-left: 10px;
+  font-size: 1.2rem;
 }
 
 .container-hero-img {
@@ -105,16 +113,21 @@ form {
 }
 
 .hero-img-doodle {
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  object-fit: contain;
 }
 
 footer {
   background-color: #fafafa;
   margin-top: auto;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 a {
@@ -127,6 +140,7 @@ h1 {
 }
 
 table {
+  margin-top: -19.3px;
   border-spacing: 0px 20px;
   font-size: 1.2rem;
 }
@@ -135,13 +149,11 @@ table {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #a65fdc21;
   height: 94dvh;
   padding: 0px 40px;
 }
 
 .banner-title {
-  background-color: aqua;
   text-align: center;
   width: 100%;
 }
@@ -152,18 +164,17 @@ table {
 
 .banner-quote {
   width: 100%;
-  background-color: aquamarine;
   text-align: center;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-bottom: 10%;
+  padding-bottom: 12%;
 }
 
 .banner-quote p {
   font-style: italic;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 .banner-nav {
@@ -172,13 +183,13 @@ table {
   font-size: 1.8rem;
   width: 100%;
   margin-top: auto;
-  background-color: bisque;
   display: flex;
   justify-content: space-between;
 }
 
 .container-blog {
   padding: 0px 40px;
+  margin-top: 30px;
 }
 
 .img-container {
